--- a/services.html
+++ b/services.html
@@ -33,7 +33,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-        <a class="navbar-brand" href="index.html"><span>ProOnliPc</span></a>
+        <a class="navbar-brand" href="index.html"><span>Fundación Creceré</span></a>
       </div>
       <div class="navbar-collapse collapse">
         <div class="menu">
