Cambios: Ortografia, Bandera, Maps

--- a/contact.html
+++ b/contact.html
@@ -32,12 +32,12 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-        <a class="navbar-brand" href="index.html"><span>Fundación Creceré</span></a>
+        <a class="navbar-brand" href="index.html"><span>Fundación Creceré <img src="./img/emo_1.png" width="45" height="35"> </span></a>
       </div>
       <div class="navbar-collapse collapse">
         <div class="menu">
           <ul class="nav nav-tabs" role="tablist">
-            <li role="presentation"><a href="index.html">Home</a></li>
+            <li role="presentation"><a href="index.html">Inicio</a></li>
             <li role="presentation"><a href="services.html">Programas</a></li>
             <!-- <li role="presentation"><a href="blog.html">Blog</a></li> -->
             <li role="presentation"><a href="portfolio.html">Galería</a></li>
@@ -96,7 +96,7 @@
         <div class="row">
           <div class="col-md-4 f-about">
             <a href="index.html"><h1><span></span>Fundación Creceré</h1></a>
-            <p>Unidos por el bienestar de las y los Jalapanecos, pueblo de personas fuertes y luchadoras que merecen ser apodadas para alcanzar sus objetivos de desarrollo.
+            <p>Unidos por el bienestar de las y los Jalapanecos, pueblo de personas fuertes y luchadoras que merecen ser apoyadas para alcanzar sus objetivos de desarrollo.
             </p>
           </div>
           <div class="col-md-4 l-posts">
@@ -160,7 +160,7 @@
   <script src="js/jquery.isotope.min.js"></script>
   <script src="js/jquery.bxslider.min.js"></script>
   <script type="text/javascript" src="js/fliplightbox.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8HeI8o-c1NppZA-92oYlXakhDPYR7XMY"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDXmY7irDGrcfq1sh_eYNYE-bFY3t92214"></script>
   <script src="js/functions.js"></script>
   <script type="text/javascript">
     $('.portfolio').flipLightBox()
