--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 <body>
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
+<!--       <div class="header_logo"> 
+        <img src="/img/Ban_1.png" />  -->
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse.collapse">
@@ -31,12 +33,12 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-        <a class="navbar-brand" href="index.html"><span>Fundación Creceré</span></a>
+        <a class="navbar-brand" href="index.html"><span>Fundación Creceré <img src="./img/emo_1.png" width="45" height="35"> </span></a>
       </div>
       <div class="navbar-collapse collapse">
         <div class="menu">
           <ul class="nav nav-tabs" role="tablist">
-            <li role="presentation" class="active"><a href="index.html">Home</a></li>
+            <li role="presentation" class="active"><a href="index.html">Inicio</a></li>
             <li role="presentation"><a href="services.html">Programas</a></li>
             <!-- <li role="presentation"><a href="blog.html">Blog</a></li> -->
             <li role="presentation"><a href="portfolio.html">Galería</a></li>
@@ -47,7 +49,7 @@
     </div>
   </nav>
 
-
+  
   <div class="container">
     <div class="row">
       <div class="slider">
@@ -176,7 +178,7 @@
         <div class="row">
           <div class="col-md-4 f-about">
             <a href="index.html"><h1><span></span>Fundación Creceré</h1></a>
-            <p>Unidos por el bienestar de las y los Jalapanecos, pueblo de personas fuertes y luchadoras que merecen ser apodadas para alcanzar sus objetivos de desarrollo.
+            <p>Unidos por el bienestar de las y los Jalapanecos, pueblo de personas fuertes y luchadoras que merecen ser apoyadas para alcanzar sus objetivos de desarrollo.
             </p>
           </div>
           <div class="col-md-4 l-posts">
