--- a/services.html
+++ b/services.html
@@ -33,12 +33,12 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-        <a class="navbar-brand" href="index.html"><span>ProOnliPc</span></a>
+        <a class="navbar-brand" href="index.html"><span>Fundación Creceré <img src="./img/emo_1.png" width="45" height="35"> </span></a>
       </div>
       <div class="navbar-collapse collapse">
         <div class="menu">
           <ul class="nav nav-tabs" role="tablist">
-            <li role="presentation"><a href="index.html">Home</a></li>
+            <li role="presentation"><a href="index.html">Inicio</a></li>
             <li role="presentation" class="active"><a href="services.html">Programas</a></li>
             <!-- <li role="presentation"><a href="blog.html">Blog</a></li> -->
             <li role="presentation"><a href="portfolio.html">Galería</a></li>
@@ -55,7 +55,7 @@
         <div class="col-md-6 col-md-offset-3">
           <div class="text-center">
             <h2>Programas implementados por la Fundación</h2>
-            <p>Fundación Creceré por medio de su Personal Técnico y Administrativo fomenta el el Departamento de Jalapa, el desarrollo de los siguientes Programas:<br>
+            <p>Fundación Creceré por medio de su Personal Técnico y Administrativo fomenta en el Departamento de Jalapa, el desarrollo de los siguientes Programas:<br>
             </p>
           </div>
           <hr>
@@ -128,7 +128,7 @@
         <div class="row">
           <div class="col-md-4 f-about">
             <a href="index.html"><h1><span></span>Fundación Creceré</h1></a>
-            <p>Unidos por el bienestar de las y los Jalapanecos, pueblo de personas fuertes y luchadoras que merecen ser apodadas para alcanzar sus objetivos de desarrollo.
+            <p>Unidos por el bienestar de las y los Jalapanecos, pueblo de personas fuertes y luchadoras que merecen ser apoyadas para alcanzar sus objetivos de desarrollo.
             </p>
           </div>
           <div class="col-md-4 l-posts">
