--- a/economica.html
+++ b/economica.html
@@ -23,8 +23,8 @@
 <body>
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
-<!--       <div class="header_logo"> 
-        <img src="/img/Ban_1.png" />  -->
+      <div class="header_logo"> 
+        <!-- <img src="/img/Ban_1.png" /> -->
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse.collapse">
@@ -50,33 +50,107 @@
   </nav>
 
   
-  <div class="container">
+  <!-- <div class="container">
     <div class="row">
       <div class="slider">
         <div class="img-responsive">
           <ul class="bxslider">
             <li><img src="img/fun_S_02.jpg" alt="" /></li>
-            <li><img src="img/fun_S_02.jpg" alt="" /></li>
-            <li><img src="img/fun_S_02.jpg" alt="" /></li>
+            <li><img src="img/fun_S_01.jpg" alt="" /></li>
+            <li><img src="img/fun_S_03.jpg" alt="" /></li>
           </ul>
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <div class="text-center">
-          <h2>¿Quiénes Somos?</h2>
-          <p>FUNDACIÓN CRECERÉ es una institución guatemalteca sin fines lucrativos. Nace en febrero de 2020 con el fin primordial de otorgar asistencia comunitaria a mujeres y hombres emprendedores, a través de la gestión de programas sociales de desarrollo por medio de capital privado y donaciones nacionales e internacionales, ejecutándolas en las áreas urbano-rurales de Guatemala; Así mismo, brindar acompañamiento, capacitaciones, asesorías, entre otros, que permitan el desarrollo socioeconómico, mejorando su calidad de vida y la de su familia.</p>
+          <br>
+          <br>
+          <img src="./img/economica2.png" width="250" height="200">
+          <br>
+          <h2>Integración a la Actividad Económica y Empleos</h2>
+          <p>Debido a las condiciones actuales y a la falta de fuentes de empleo, es necesario que los Guatemaltecos perciban ingresos propios, por ello gestionamos donaciones especiales que ayuden a generar proyectos productivos, con ello lograremos que las personas puedan contar con oportunidades reales de ingresos y que puedan generar empleos directos e indirectos por medio de las cadenas de comercio, donde las familias de la comunidad generan productos y nuestra Fundación genera enlaces con los compradores, de esta manera se evita que más personas busquen como alternativa salir de nuestro país.</p>
         </div>
         <hr>
       </div>
     </div>
   </div>
 
-  <div class="container">
+  <div class="services">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3">
+          <div class="wow bounceIn" data-wow-offset="0" data-wow-delay="0.4s">
+            <!-- <h4>Donaciones</h4> -->
+            <div class="icon">
+              <img src="./img/donaciones.png" width="200" height="200">
+              <!-- <i class="fa fa-heart-o fa-3x"></i> -->
+            </div>
+            <div class="text-center">
+            <p>Se busca Beneficiar a personas en probreza extrema, recibiendo diferentes tipos de ayuda, generando un cambio positivo en las familias Guatemaltecas</p>
+            </div>
+            <div class="ficon">
+              <a href="donaciones.html" class="btn btn-default" role="button">Saber más</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="wow bounceIn" data-wow-offset="0" data-wow-delay="1.0s">
+            <!-- <h4>Programa No. 2</h4> -->
+            <div class="icon">
+              <img src="./img/ahorro.png" width="200" height="200">
+              <!-- <i class="fa fa-desktop fa-3x"></i> -->
+            </div>
+            <div class="text-center">
+            <p>Promovemos la cultura del ahorro en nuestro beneficiarios, para que puedan tener más oportunidades de generar desarrollo familiar para su futuro.</p>
+            </div>
+            <div class="ficon">
+              <a href="ahorro.html" class="btn btn-default" role="button">Saber más</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="wow bounceIn" data-wow-offset="0" data-wow-delay="1.6s">
+            <!-- <h4>Programa No. 3</h4> -->
+            <div class="icon">
+              <img src="./img/tecnica.png" width="200" height="200">
+              <!-- <i class="fa fa-location-arrow fa-3x"></i> -->
+            </div>
+            <div class="text-center">
+            <p>Apoyamos con asistencia y acompañamiento a las familias más necesitadas, capacitándolas y que emprendan con éxito diferentes proyectos.</p>
+            </div>
+            <div class="ficon">
+              <a href="tecnica.html" class="btn btn-default" role="button">Saber más</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="wow bounceIn" data-wow-offset="0" data-wow-delay="2.2s">
+            <!-- <h4>Programa No. 4</h4> -->
+            <div class="icon">
+              <img src="./img/economica.png" width="200" height="200">
+              <!-- <i class="fa fa-laptop fa-3x"></i> -->
+            </div>
+            <div class="text-center">
+            <p>Generar por medio de donaciones especiales, ingresos y oportunidades de empleos indirectos para evitar la migración de nuestros compatriotas.</p>
+            </div>
+            <div class="ficon">
+              <a href="economica.html" class="btn btn-default" role="button">Saber más</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- <div class="container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <div class="text-center">
@@ -86,9 +160,9 @@
         <hr>
       </div>
     </div>
-  </div>
+  </div> -->
 
-  <div class="container">
+  <!-- <div class="container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <div class="text-center">
@@ -98,10 +172,10 @@
         <hr>
       </div>
     </div>
-  </div>
+  </div> -->
 
  
-  <div class="container">
+  <!-- <div class="container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <div class="text-center">
@@ -112,18 +186,18 @@
         <hr>
       </div>
     </div>
-  </div>
+  </div> -->
 
-  <div class="content">
+  <!-- <div class="content">
     <div class="grid">
       <figure class="effect-zoe">
         <img src="img/G_03.jpg" alt="img25" />
         <figcaption>
           <h2><span>Mujeres Organizadas</span></h2>
           <p class="icon-links">
-            <!-- <a href="#"><span class="icon-heart"></span></a>
+            <a href="#"><span class="icon-heart"></span></a>
             <a href="#"><span class="icon-eye"></span></a>
-            <a href="#"><span class="icon-paper-clip"></span></a> -->
+            <a href="#"><span class="icon-paper-clip"></span></a>
           </p>
           <p class="description">Organización de Mujeres para el desarrollo social y economico de las Familias y la Comunidad.</p>
         </figcaption>
@@ -136,14 +210,14 @@
             <!-- <a href="#"><span class="icon-heart"></span></a>
             <a href="#"><span class="icon-eye"></span></a>
             <a href="#"><span class="icon-paper-clip"></span></a> -->
-          </p>
+          <!-- </p>
           <p class="description">La Agricultar la principal fuente de Ingreso en las comunidades pobres del Municipio de San Pedro PInula, Jalapa.</p>
         </figcaption>
       </figure>
     </div>
-  </div>
+  </div> --> -->
 
-  <div class="content">
+  <!-- <div class="content">
     <div class="grid">
       <figure class="effect-zoe">
         <img src="img/G_01.jpg" alt="img27" />
@@ -153,7 +227,7 @@
             <!-- <a href="#"><span class="icon-heart"></span></a>
             <a href="#"><span class="icon-eye"></span></a>
             <a href="#"><span class="icon-paper-clip"></span></a> -->
-          </p>
+          <!-- </p>
           <p class="description">Una de las principales fuentes de ingresos para las Familias Jalapanecas.</p>
         </figcaption>
       </figure>
@@ -161,16 +235,16 @@
         <img src="img/G_02.jpg" alt="img30" />
         <figcaption>
           <h2>Colis <span>Producción de Café</span></h2>
-          <p class="icon-links">
+          <p class="icon-links"> -->
             <!-- <a href="#"><span class="icon-heart"></span></a>
             <a href="#"><span class="icon-eye"></span></a>
             <a href="#"><span class="icon-paper-clip"></span></a> -->
-          </p>
+          <!-- </p>
           <p class="description">Don José, colocando toda su Fé y todo su Capital en la próxima cosecha de café.</p>
         </figcaption>
       </figure>
     </div>
-  </div>
+  </div> --> -->
 
   <footer>
     <div class="inner-footer">
@@ -195,7 +269,7 @@
           </div>
           <div class="col-md-4 f-contact">
             <h3 class="widgetheading">¡Estamós para servirté, Comunicate con Nosotros!</h3>
-            <a href="mailto:fundacion@funcrecere.org">
+            <a href="mailto:fundacion@funcrecere.org"">
               <p><i class="fa fa-envelope"></i> fundacion@funcrecere.org <br> <i class="fa fa-envelope"></i> donaciones@funcrecere.org</p>
             </a>
             <p><i class="fa fa-phone"></i> +502 3083 9129 <br><i class="fa fa-phone"></i> +502 5134 2657 <br><i class="fa fa-phone"></i> +502 5017 0988</p>
