--- a/portfolio.html
+++ b/portfolio.html
@@ -69,22 +69,22 @@
         <div class="col-md-10 col-md-offset-1">
           <a href="img/Gl_01.jpg" class="flipLightBox">
 						<img src="img/Gl_01.jpg" width="230" height="230" alt="Image 1" />
-						<span><b>Funcrecere Grupo 1, Imagen 1</b> Aquí va la descripción de la imagen.</span>
+						<span><b>Funcrecere Grupo 1, Imagen 1</b> Gente trabajadora de Jalapa.</span>
 					</a>
 
           <a href="img/Gl_02.jpg" class="flipLightBox">
 						<img src="img/Gl_02.jpg" width="230" height="230" alt="Image 2" />
-						<span><b>Funcrecere Grupo 1, Imagen 2</b> Aquí va la descripción de la imagen.</span>
+						<span><b>Funcrecere Grupo 1, Imagen 2</b> Niños disfrutando de un paseo.</span>
 					</a>
 
           <a href="img/Gl_03.jpg" class="flipLightBox">
 						<img src="img/Gl_03.jpg" width="230" height="230" alt="Image 3" />
-						<span><b>Funcrecere Grupo 1, Imagen 3</b> Aquí va la descripción de la imagen.</span>
+						<span><b>Funcrecere Grupo 1, Imagen 3</b> Casa construida con lámina.</span>
 					</a>
 
           <a href="img/Gl_04.jpg" class="flipLightBox">
 						<img src="img/Gl_04.jpg" width="230" height="230" alt="Image 4" />
-						<span><b>Funcrecere Grupo 1, Imagen 4</b> Aquí va la descripción de la imagen.</span>
+						<span><b>Funcrecere Grupo 1, Imagen 4</b> Casa construida de adobe.</span>
 					</a>
         </div>
       </div>
@@ -97,22 +97,22 @@
         <div class="col-md-6 col-md-offset-3">
           <a href="img/Gl_05.jpg" class="flipLightBox">
 						<img src="img/Gl_05.jpg" width="250" height="250" alt="Image 1" />
-						<span><b>Funcrecere Grupo 1, Imagen 5</b> Aquí va la descripción de la imagen.</span>
+						<span><b>Funcrecere Grupo 1, Imagen 5</b> Grupo de mujeres organizadas.</span>
 					</a>
 
           <a href="img/Gl_06.jpg" class="flipLightBox">
 						<img src="img/Gl_06.jpg" width="250" height="250" alt="Image 2" />
-						<span><b>Funcrecere Grupo 1, Imagen 6</b> Aquí va la descripción de la imagen.</span>
+						<span><b>Funcrecere Grupo 1, Imagen 6</b> Producción Agrícola.</span>
 					</a>
 
           <a href="img/Gl_07.jpg" class="flipLightBox">
 						<img src="img/Gl_07.jpg" width="250" height="250" alt="Image 3" />
-						<span><b>Funcrecere Grupo 1, Imagen 7</b> Aquí va la descripción de la imagen.</span>
+						<span><b>Funcrecere Grupo 1, Imagen 7</b> Padre de Familia trabajando en el campo.</span>
 					</a>
 
           <a href="img/Gl_08.jpg" class="flipLightBox">
 						<img src="img/Gl_08.jpg" width="250" height="250" alt="Image 4" />
-						<span><b>Funcrecere Grupo 1, Imagen 8</b> Aquí va la descripción de la imagen.</span>
+						<span><b>Funcrecere Grupo 1, Imagen 8</b> Taller sobre Fomento al Ahorro.</span>
 					</a>
         </div>
       </div>
@@ -129,20 +129,23 @@
             </p>
           </div>
           <div class="col-md-4 l-posts">
-            <h3 class="widgetheading">Actualmente trabajando en:</h3>
+            <div>
+              <img src="./img/Ban_1.png" width="350" height="250">
+            </div>
+            <!-- <h3 class="widgetheading">Actualmente trabajando en:</h3>
             <ul>
               <li><a href="#">Jalapa, cabecera departamental.</a></li>
               <li><a href="#">San Pedro Pinual, Jalapa</a></li>
               <li><a href="#">San Luis Jilotepeque, Jalapa</a></li>
               <li><a href="#">Mataquescuintla, Jalapa</a></li>
-            </ul>
+            </ul> -->
           </div>
           <div class="col-md-4 f-contact">
             <h3 class="widgetheading">¡Estamós para servirté, Comunicate con Nosotros!</h3>
-            <a href="#">
-              <p><i class="fa fa-envelope"></i> fundacion@funcrecere.org</p>
+            <a href="mailto:fundacion@funcrecere.org"">
+              <p><i class="fa fa-envelope"></i> fundacion@funcrecere.org <br> <i class="fa fa-envelope"></i> donaciones@funcrecere.org</p>
             </a>
-            <p><i class="fa fa-phone"></i> +502 3083 9129</p>
+            <p><i class="fa fa-phone"></i> +502 3083 9129 <br><i class="fa fa-phone"></i> +502 5134 2657 <br><i class="fa fa-phone"></i> +502 5017 0988</p>
             <p><i class="fa fa-home"></i> Fundación Creceré | Zona 2, Barrio San Francisco <br> Jalapa, Jalapa, Guatemala 21001</p>
           </div>
         </div>
@@ -165,11 +168,11 @@
       <div class="container">
         <div class="row">
           <ul class="social-network">
-            <li><a href="#" data-placement="top" title="Facebook"><i class="fa fa-facebook fa-1x"></i></a></li>
-            <li><a href="#" data-placement="top" title="Twitter"><i class="fa fa-twitter fa-1x"></i></a></li>
-            <li><a href="#" data-placement="top" title="Linkedin"><i class="fa fa-linkedin fa-1x"></i></a></li>
-            <li><a href="#" data-placement="top" title="Pinterest"><i class="fa fa-pinterest fa-1x"></i></a></li>
-            <li><a href="#" data-placement="top" title="Google plus"><i class="fa fa-google-plus fa-1x"></i></a></li>
+            <li><a href="https://www.facebook.com" data-placement="top" title="Facebook"><i class="fa fa-facebook fa-1x"></i></a></li>
+            <li><a href="https://www.twitter.com" data-placement="top" title="Twitter"><i class="fa fa-twitter fa-1x"></i></a></li>
+            <li><a href="https://www.linkedin.com" data-placement="top" title="Linkedin"><i class="fa fa-linkedin fa-1x"></i></a></li>
+            <!-- <li><a href="#" data-placement="top" title="Pinterest"><i class="fa fa-pinterest fa-1x"></i></a></li> -->
+            <!-- <li><a href="#" data-placement="top" title="Google plus"><i class="fa fa-google-plus fa-1x"></i></a></li> -->
           </ul>
         </div>
       </div>
